--- a/css/style.css
+++ b/css/style.css
@@ -605,11 +605,13 @@ margin-left: 25%;
 }
 .email_box {
     width: 85%;
-    float: right;
+    float: left;
+	margin-left:8%;
     background-color: #14120e;
     height: auto;
     padding: 20px 20px;
     opacity: 0.80;
+	margin-bottom:50px;
 }
 .form-group {
     margin-bottom: 2rem;
